--- a/app/src/main/res/layout/item_alarm_time.xml
+++ b/app/src/main/res/layout/item_alarm_time.xml
@@ -8,7 +8,7 @@
     android:paddingEnd="8dp">
 
     <TextView
-        android:id="@+id/tvLabel"
+        android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -27,10 +27,10 @@
         android:paddingEnd="8dp"/>
 
     <ImageButton
-        android:id="@+id/btnMore"
+        android:id="@+id/btnDelete"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_more"
+        android:src="@drawable/ic_delete"
         android:contentDescription="옵션" />
 </LinearLayout>
