--- a/app/src/main/res/layout/fragment_sugar_board.xml
+++ b/app/src/main/res/layout/fragment_sugar_board.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
-
+    //테스트
     <!-- 목록 -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSugarPosts"
