--- a/app/src/main/res/layout/fragment_write_post.xml
+++ b/app/src/main/res/layout/fragment_write_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
-
+    //테스트
     <!-- 상단 앱바 -->
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
