--- a/app/src/main/res/layout/item_hot_post.xml
+++ b/app/src/main/res/layout/item_hot_post.xml
@@ -9,7 +9,7 @@
     app:strokeColor="#E6EEF1"
     app:strokeWidth="1dp"
     app:cardBackgroundColor="#FFFFFF">
-
+    //테스트
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
